Se cambio el titulo

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta name="author" content="Técn. Robles Vega,Royer Leandro">
 
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Cevicheria Pez Limón y Punto</title>
+  <title>PWA</title>
 
   <!-- Declaración de manifest -->
   <link rel="manifest" href="manifest.json">
